# UID-GID-Management-System

./: .gitignore  README.md  README_create_container.md  apt-packages-core.txt  apt-packages-maintenance.txt  docker-compose.yml  mysql_backup.sh  requirements.txt
refactoring/: README.md  pyproject.toml
refactoring/docs/: kerberos_e2e_test_scenario.md  nas-kerberos-adoption-guide.md
refactoring/playbooks/: README.md
refactoring/tests/: __init__.py  fakes.py  test_create_container.py
refactoring/uid_manager/: __init__.py  cli.py  db.py  errors.py  models.py  ports.py
script/: README.md  common_domain_db.sh  create_container.sh  db_config.env  db_config.example.env  delete_container.sh  delete_container_with_notification.sh  delete_user.py  email_utils.py  export_users_to_excel.py  extend_container_expiration.sh  generate_servers_jsonl.py  install_daily_maintenance_timer.sh  manage_group.sh  migrate_add_user_contact_columns.sh  pyproject.toml  requirements.txt  run_daily_maintenance.sh  send_container_created_email.py  send_container_deleted_email.py  send_container_extended_email.py  send_expiration_reminder_emails.py  update_user_emails_from_csv.py
script/docs/: kerberos_e2e_test_scenario.md  nas-kerberos-adoption-guide.md
script/playbooks/: README.md  farm_host_kerberos_identity.yml  nas_kerberos_refresh.yml  nas_prepare_home.yml  storage_prepare_home.yml
script/tests/: __init__.py  fakes.py  run_tests.py  test_commands_and_sync.py  test_config_ports.py  test_create_container.py  test_group_delete_extend_cleanup.py
script/uid_manager/: __init__.py  db.py  (+6 more)
(+76 files in other folders)
