[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uid-manager-refactor"
version = "0.1.0"
description = "Python refactor of DECS UID/container management scripts"
requires-python = ">=3.9"
dependencies = [
  "PyMySQL>=1.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.2"]

[project.scripts]
uidctl = "uid_manager.cli:main"

[tool.setuptools.packages.find]
include = ["uid_manager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
